--- a/src/sample/nome_jogador.fxml
+++ b/src/sample/nome_jogador.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerNome">
+<Pane maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerNome">
    <children>
       <TextArea fx:id="player1" layoutX="331.0" layoutY="80.0" prefHeight="40.0" prefWidth="200.0" />
       <TextArea fx:id="player2" layoutX="331.0" layoutY="140.0" prefHeight="40.0" prefWidth="200.0" />
