--- a/src/View/qtd_jogador.fxml
+++ b/src/View/qtd_jogador.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerJogador">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerJogador">
    <children>
       <Button fx:id="btnContinue" layoutX="250.0" layoutY="300.0" mnemonicParsing="false" text="Avançar" />
       <ChoiceBox fx:id="choicePlayer" layoutX="350.0" layoutY="150.0" prefWidth="150.0" />
