--- a/src/View/quiz.fxml
+++ b/src/View/quiz.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerQuiz">
+<Pane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerQuiz">
    <children>
       <TextArea fx:id="question" layoutX="260.0" layoutY="140.0" prefHeight="280.0" prefWidth="480.0" />
       <Button fx:id="confirm" layoutX="600.0" layoutY="510.0" mnemonicParsing="false" text="Confirma" />
