--- a/src/View/report.fxml
+++ b/src/View/report.fxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8">
+   <children>
+      <Label layoutX="4.0" layoutY="39.0" prefHeight="40.0" prefWidth="594.0" text="Label" textAlignment="CENTER" />
+      <ListView layoutY="138.0" prefHeight="247.0" prefWidth="594.0" />
+   </children>
+</Pane>
