--- a/src/View/report.fxml
+++ b/src/View/report.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerReport">
    <children>
-      <Label layoutX="4.0" layoutY="39.0" prefHeight="40.0" prefWidth="594.0" text="Label" textAlignment="CENTER" />
-      <ListView layoutY="138.0" prefHeight="247.0" prefWidth="594.0" />
+      <Label fx:id="title" layoutX="4.0" layoutY="39.0" prefHeight="40.0" prefWidth="594.0" text="Label" textAlignment="CENTER" />
+      <ListView fx:id="listPlayer" layoutY="138.0" prefHeight="247.0" prefWidth="594.0" />
    </children>
 </Pane>
