--- a/src/View/report.fxml
+++ b/src/View/report.fxml
@@ -5,7 +5,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerReport">
    <children>
-      <Label fx:id="title" layoutX="4.0" layoutY="39.0" prefHeight="40.0" prefWidth="594.0" text="Label" textAlignment="CENTER" />
-      <ListView fx:id="listPlayer" layoutY="138.0" prefHeight="247.0" prefWidth="594.0" />
+      <Label fx:id="title" layoutX="162.0" layoutY="34.0" prefHeight="40.0" prefWidth="276.0" text="Label" textAlignment="CENTER" />
+      <ListView fx:id="listPlayer" layoutX="3.0" layoutY="91.0" prefHeight="247.0" prefWidth="594.0" />
    </children>
 </Pane>
