--- a/src/View/style.css
+++ b/src/View/style.css
@@ -1,6 +1,6 @@
 .root{
     -fx-background-color : grey;
-    -fx-background-image : url("background.jpg");
+    -fx-background-image : url("Images/background.jpg");
 }
 
 .label {
