--- a/src/View/qtd_jogador.fxml
+++ b/src/View/qtd_jogador.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerJogador">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerJogador">
    <children>
-      <Button fx:id="btnContinue" layoutX="250.0" layoutY="300.0" mnemonicParsing="false" text="Avançar" />
-      <ChoiceBox fx:id="choicePlayer" layoutX="350.0" layoutY="150.0" prefWidth="150.0" />
-      <Label alignment="CENTER" layoutX="79.0" layoutY="143.0" prefHeight="70.0" prefWidth="180.0" text="Escolha a quantidade de jogadores" wrapText="true" />
+      <Button fx:id="btnContinue" layoutX="150.0" layoutY="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Avançar" />
+      <ChoiceBox fx:id="choicePlayer" layoutX="170.0" layoutY="138.0" prefWidth="60.0" />
+      <Label alignment="CENTER" layoutX="59.0" layoutY="65.0" text="Escolha a quantidade de jogadores" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
    </children>
 </Pane>
