--- a/src/View/quiz.fxml
+++ b/src/View/quiz.fxml
@@ -4,22 +4,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerQuiz">
+<Pane minHeight="740.0" minWidth="1024.0" prefHeight="740.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerQuiz">
    <children>
-      <TextArea fx:id="question" layoutX="265.0" layoutY="140.0" prefHeight="280.0" prefWidth="480.0" />
-      <Button fx:id="confirm" layoutX="600.0" layoutY="510.0" mnemonicParsing="false" text="Confirma" />
-      <Label fx:id="name1" layoutX="75.0" layoutY="45.0" text="Label" />
-      <Label fx:id="name2" layoutX="265.0" layoutY="45.0" text="Label" />
-      <Label fx:id="name3" layoutX="450.0" layoutY="45.0" text="Label" />
-      <Label fx:id="name4" layoutX="650.0" layoutY="45.0" text="Label" />
-      <ImageView fx:id="pictureRound" fitHeight="250.0" fitWidth="220.0" layoutX="21.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true" />
-      <RadioButton fx:id="option1" layoutX="50.0" layoutY="480.0" mnemonicParsing="false" text="A" />
-      <RadioButton fx:id="option2" layoutX="50.0" layoutY="540.0" mnemonicParsing="false" text="C" />
-      <RadioButton fx:id="option3" layoutX="300.0" layoutY="480.0" mnemonicParsing="false" text="B" />
-      <RadioButton fx:id="option4" layoutX="300.0" layoutY="540.0" mnemonicParsing="false" text="D" />
-      <Label fx:id="score1" layoutX="75.0" layoutY="75.0" text="Label" />
-      <Label fx:id="score2" layoutX="265.0" layoutY="75.0" text="Label" />
-      <Label fx:id="score3" layoutX="450.0" layoutY="75.0" text="Label" />
-      <Label fx:id="score4" layoutX="650.0" layoutY="75.0" text="Label" />
+      <TextArea fx:id="question" editable="false" layoutX="310.0" layoutY="140.0" prefHeight="160.0" prefWidth="600.0" wrapText="true" />
+      <Button fx:id="confirm" layoutX="840.0" layoutY="480.0" mnemonicParsing="false" prefHeight="140.0" prefWidth="120.0" text="Confirma" />
+      <Label fx:id="name1" layoutX="150.0" layoutY="45.0" text="Label" />
+      <Label fx:id="name2" layoutX="350.0" layoutY="45.0" text="Label" />
+      <Label fx:id="name3" layoutX="550.0" layoutY="45.0" text="Label" />
+      <Label fx:id="name4" layoutX="750.0" layoutY="45.0" text="Label" />
+      <ImageView fx:id="pictureRound" fitHeight="150.0" fitWidth="180.0" layoutX="100.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true" />
+      <RadioButton fx:id="option1" layoutX="45.0" layoutY="360.0" maxHeight="58.0" maxWidth="720.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="700.0" text="A" wrapText="true" />
+      <RadioButton fx:id="option2" layoutX="45.0" layoutY="540.0" maxHeight="58.0" maxWidth="720.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="700.0" text="C" wrapText="true" />
+      <RadioButton fx:id="option3" layoutX="45.0" layoutY="450.0" maxHeight="58.0" maxWidth="720.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="700.0" text="B" wrapText="true" />
+      <RadioButton fx:id="option4" layoutX="45.0" layoutY="630.0" maxHeight="58.0" maxWidth="720.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="700.0" text="D" wrapText="true" />
+      <Label fx:id="score1" layoutX="150.0" layoutY="75.0" text="Label" />
+      <Label fx:id="score2" layoutX="350.0" layoutY="75.0" text="Label" />
+      <Label fx:id="score3" layoutX="550.0" layoutY="75.0" text="Label" />
+      <Label fx:id="score4" layoutX="750.0" layoutY="75.0" text="Label" />
    </children>
 </Pane>
