--- a/src/View/report.fxml
+++ b/src/View/report.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerReport">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerReport">
    <children>
-      <Label fx:id="title" layoutX="162.0" layoutY="34.0" prefHeight="40.0" prefWidth="276.0" text="Label" textAlignment="CENTER" />
-      <ListView fx:id="listPlayer" layoutX="3.0" layoutY="91.0" prefHeight="247.0" prefWidth="594.0" />
+      <Label layoutX="280.0" layoutY="46.0" prefHeight="40.0" prefWidth="80.0" text="Ranking" />
+      <ListView fx:id="listPlayer" layoutX="10.0" layoutY="120.0" prefHeight="320.0" prefWidth="620.0" />
    </children>
 </Pane>
