--- a/src/View/qtd_jogador.fxml
+++ b/src/View/qtd_jogador.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerJogador">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerJogador">
    <children>
-      <Button fx:id="btnContinue" layoutX="150.0" layoutY="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Avançar" />
-      <ChoiceBox fx:id="choicePlayer" layoutX="170.0" layoutY="138.0" prefWidth="60.0" />
-      <Label alignment="CENTER" layoutX="59.0" layoutY="65.0" text="Escolha a quantidade de jogadores" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="btnContinue" layoutX="160.0" layoutY="222.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Avançar" />
+      <ChoiceBox fx:id="choicePlayer" layoutX="180.0" layoutY="138.0" prefWidth="60.0" />
+      <Label alignment="CENTER" layoutX="69.0" layoutY="65.0" text="Escolha a quantidade de jogadores" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="16.0" />
          </font></Label>
+      <Button fx:id="btnRank" layoutX="185.0" layoutY="305.0" mnemonicParsing="false" text="Rank" />
    </children>
 </Pane>
