--- a/src/View/report.fxml
+++ b/src/View/report.fxml
@@ -5,7 +5,8 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerReport">
    <children>
-      <Label layoutX="280.0" layoutY="46.0" prefHeight="40.0" prefWidth="80.0" text="Ranking" />
-      <ListView fx:id="listPlayer" layoutX="10.0" layoutY="120.0" prefHeight="320.0" prefWidth="620.0" />
+      <Label layoutX="290.0" layoutY="30.0" text="Ranking" />
+      <ListView fx:id="listPlayer" layoutX="10.0" layoutY="80.0" prefHeight="300.0" prefWidth="620.0" />
+      <Button fx:id="btnStart" layoutX="270.0" layoutY="420.0" minWidth="100.0" mnemonicParsing="false" prefWidth="100.0" text="Início" />
    </children>
 </Pane>
